--- a/main.css
+++ b/main.css
@@ -3,8 +3,7 @@ body {
 }
 
 h1 {
-    font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family: 'Bungee Shade';font-size: 40px;
     color: white;
 }
 
